--- a/app/src/main/res/layout/frag_emp_signin.xml
+++ b/app/src/main/res/layout/frag_emp_signin.xml
@@ -3,7 +3,31 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.example.chinmoydash.ddugky.EmployerActivity">
-
-
-
+    <EditText
+        android:id="@+id/email"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="50dp"
+        android:hint="email"
+        android:layout_alignParentTop="true"
+        android:layout_marginRight="20dp"
+        android:layout_marginLeft="20dp" />
+    <EditText
+        android:id="@+id/password"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="50dp"
+        android:layout_below="@id/email"
+        android:layout_marginRight="20dp"
+        android:layout_marginLeft="20dp"
+        android:hint="password" />
+    <Button
+        android:id="@+id/sign_in"
+        android:text="Sign-In "
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:backgroundTint="@color/navigationBarColor"
+        android:layout_alignParentBottom="true"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"/>
 </RelativeLayout>
